cluster/test/memo/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memo-ingressroute
  namespace: memo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`memo.test-kubes.com`)
      kind: Rule
      services:
        - name: memo-ui
          port: 5230
